windows tbm funciona

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ server.port=${PORT:5000}
 paginacao.qtd_por_pagina=10
 
 # Database Connection
-spring.datasource.url=${JDBC_HEROKU_POSTGRESQL_OLIVE_URL:jdbc:sqlite:/home/leonardo/Github/tercalivre/tercalivre-orm/db.sqlite3}
+# Linux
+# spring.datasource.url=${JDBC_HEROKU_POSTGRESQL_OLIVE_URL:jdbc:sqlite:/home/leonardo/Github/tercalivre/tercalivre-orm/db.sqlite3}
+# Windows
+spring.datasource.url=${JDBC_HEROKU_POSTGRESQL_OLIVE_URL:jdbc:sqlite:C:\\Github\\tercalivre-orm\\db.sqlite3}
 spring.datasource.username=
 spring.datasource.password=
