--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ paginacao.qtd_por_pagina=10
 spring.datasource.url=${HEROKU_POSTGRESQL_OLIVE_URL:jdbc:sqlite:C:\\Github\\tercalivre-orm\\db.sqlite3}
 spring.datasource.username=
 spring.datasource.password=
+
+spring.jpa.properties.hibernate.show_sql=true
