heroku nao funciona o banco

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,5 @@ spring.datasource.url=${HEROKU_POSTGRESQL_OLIVE_URL:jdbc:sqlite:C:\\Github\\terc
 spring.datasource.username=
 spring.datasource.password=
 
-spring.jpa.properties.hibernate.show_sql=true
+# Debud mode: comments
+spring.datasource.driver-class-name=org.postgresql.Driver
