tentando fazer heroku funcionar 34

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ paginacao.qtd_por_pagina=10
 # spring.datasource.url=${JDBC_HEROKU_POSTGRESQL_OLIVE_URL:jdbc:sqlite:/home/leonardo/Github/tercalivre/tercalivre-orm/db.sqlite3}
 # Windows
 spring.datasource.url=${HEROKU_POSTGRESQL_OLIVE_URL:jdbc:sqlite:C:\\Github\\tercalivre-orm\\db.sqlite3}
-#spring.datasource.username=
-#spring.datasource.password=
+spring.datasource.username=
+spring.datasource.password=
